--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,22 @@
 language: go
+
 go:
   - 1.2
+  - 1.3
+
+matrix:
+  fast_finish: true
+
+before_install:
+  - go get -v code.google.com/p/go.tools/cmd/vet
+  - go get -v github.com/golang/lint/golint
+  - go get -v code.google.com/p/go.tools/cmd/cover
+
 install:
-  - go get -t ./...
+  - go get -t -v ./...
+  - go build -v ./...
+
+script:
+  - go vet ./...
+  - $HOME/gopath/bin/golint .
+  - go test -cpu=2 -race -cover -v ./...
