explicit vet/lint of inject.go

--- a/.travis.yml
+++ b/.travis.yml
@@ -17,6 +17,6 @@ install:
   - go build -v ./...
 
 script:
-  - go vet ./...
-  - $HOME/gopath/bin/golint .
+  - go vet inject.go
+  - $HOME/gopath/bin/golint inject.go
   - go test -cpu=2 -race -cover -v ./...
