split cover & race for accurate line numbers

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,10 +13,12 @@ before_install:
   - go get -v code.google.com/p/go.tools/cmd/cover
 
 install:
-  - go get -t -v ./...
-  - go build -v ./...
+  - go install -race -v std
+  - go get -race -t -v ./...
+  - go install -race -v ./...
 
 script:
   - go vet inject.go
   - $HOME/gopath/bin/golint inject.go
-  - go test -cpu=2 -race -cover -v ./...
+  - go test -cpu=2 -race -v ./...
+  - go test -cpu=2 -covermode=atomic ./...
