--- a/.travis.yml
+++ b/.travis.yml
@@ -1,16 +1,12 @@
 language: go
 
 go:
-  - 1.2
-  - 1.3
-
-matrix:
-  fast_finish: true
+  - 1.6
 
 before_install:
-  - go get -v code.google.com/p/go.tools/cmd/vet
   - go get -v github.com/golang/lint/golint
-  - go get -v code.google.com/p/go.tools/cmd/cover
+  - go get -v golang.org/x/tools/cmd/cover
+  - go get -v golang.org/x/tools/cmd/vet
 
 install:
   - go install -race -v std
