--- a/.travis.yml
+++ b/.travis.yml
@@ -4,7 +4,7 @@ go:
   - "1.10"
 
 before_install:
-  - go get -u golang.org/x/lint/golint
+  - go get -v golang.org/x/lint/golint
   - go get -v golang.org/x/tools/cmd/cover
 
 install:
